# ascii-rs

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  index.html  output.txt  railway.toml  render.yaml  start.sh  test_ascii.json
.github/workflows/: deploy-render.yml
frontend/: Cargo.toml  index.html
frontend/src/: lib.rs
src/: lib.rs  main.rs
src/application/services/: ascii_conversion_service.rs  mod.rs
src/application/use_cases/: convert_image_to_ascii.rs  mod.rs  upload_image.rs
src/domain/entities/: ascii_art.rs  image_data.rs  mod.rs
src/domain/repositories/: ascii_art_repository.rs  image_repository.rs  mod.rs
src/domain/value_objects/: conversion_config.rs  image_format.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/repositories/: in_memory_ascii_art_repository.rs  in_memory_image_repository.rs  mod.rs
src/infrastructure/web/: error.rs  extractors.rs  mod.rs  routes.rs
src/presentation/handlers/: ascii_handlers.rs  mod.rs
static/: index.html
