[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo-net = "0.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "HtmlElement",
  "HtmlInputElement",
  "File",
  "FormData",
  "FileList",
  "Blob",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"